# JobPilot

./: README.md  package-lock.json  package.json  profile.example.json  profile.multi-role.example.json  pyproject.toml  test_jobspy_search.py
.github/workflows/: ci.yml  publish.yml
enrich_debug/: page_html.html
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: MonthYearPicker.css  MonthYearPicker.tsx  ProfileForm.css  ProfileForm.tsx  ResumeUpload.css  ResumeUpload.tsx
frontend/src/components/sections/: AvailabilityForm.tsx  CompensationForm.tsx  CoverLetterForm.css  CoverLetterForm.tsx  EEOVoluntaryForm.tsx  (+9 more)
frontend/src/hooks/: useFormData.ts
frontend/src/pages/: ApplyTrackerPage.css  ApplyTrackerPage.tsx  ProfilePage.css  ProfilePage.tsx
src/jobpilot/: __init__.py  __main__.py  cli.py  config.py  database.py  llm.py  pipeline.py  view.py
src/jobpilot/agent/: README.md  __init__.py  apply_agent.py  ats_detector.py  config.py  mcp_server.py  prompts.py
src/jobpilot/apply/: chrome.py  dashboard.py  launcher.py  prompt.py
src/jobpilot/config/: employers.yaml  searches.example.yaml  sites.yaml
src/jobpilot/discovery/: jobspy.py  smartextract.py  workday.py
src/jobpilot/enrichment/: detail.py
src/jobpilot/resume/: __init__.py  formatter.py  generator.py  parser.py
src/jobpilot/scoring/: cover_letter.py  pdf.py  scorer.py  tailor.py  utils.py  validator.py
src/jobpilot/web/: __init__.py  api.py  main.py  utils.py
(+3 files in other folders)
