[project]
name = "jobpilot"
version = "0.1.0"
description = "AI-powered end-to-end job application pipeline"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [{name = "Qinxin Ren"}]
keywords = ["job-search", "automation", "ai", "resume", "apply", "job-application"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pdfplumber>=0.10.0",
    "PyPDF2>=3.0.0",
    "langgraph>=0.2.0",
    "fastmcp>=0.9.0",
    ]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
jobpilot = "jobpilot.cli:app"

[project.urls]
Homepage = "https://github.com/qinxinren1/JobPilot"
Repository = "https://github.com/qinxinren1/JobPilot"
Issues = "https://github.com/qinxinren1/JobPilot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobpilot"]

[tool.hatch.build]
artifacts = ["src/jobpilot/config/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 120
